# pyvyos

./: .env.example  .gitignore  .readthedocs.yaml  CONTRIB.md  LICENSE  Makefile  README.md  example.py  pyproject.toml  requirements.txt  setup.py  test_show.py
.github/workflows/: python-app.yml  python-publish.yml
docs/: requirements.txt
docs/source/: conf.py  index.rst  pyvyos.rst
pyvyos/: device.py
tests/: test_vy_device.py
vagrant/: .env.example  VAGRANT.md  Vagrantfile  virtualbox-wsl2.sh
vyapi/: __init__.py  device.py
